@@ -3,6 +3,8 @@ Changelog
 
 9.0.dev0 - (unreleased)
 -----------------------
+* Cleanup: Remove deprecated **make_pdf_cover** from download.pdf
+  [voineali refs #22971]
 * Change: Moved async API from eea.pdf to eea.converter in order to reuse it
   for other async jobs (e.g. eea.epub)
   [voineali refs #22971]
